--- a/usm_peleng/Dockerfile
+++ b/usm_peleng/Dockerfile
@@ -2,6 +2,7 @@ FROM perl:5
 
 COPY cpanfile /
 RUN cpanm --installdeps .
-RUN mkdir -p /app /var/log/userside/usm_peleng/logs/
+RUN mkdir -p /app /var/log/usm_peleng
 
 WORKDIR /app
+CMD [ "perl", "usm_peleng.pl" ]
